<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:layout_height="wrap_content">
        <ImageView
            android:layout_width="match_parent"
            android:layout_marginTop="56dp"
            android:layout_marginBottom="16dp"
            android:layout_height="84dp"
            android:src="@drawable/ic_logo"
            android:contentDescription="@string/app_name" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="8dp"
            android:text="@string/app_name"
            android:textSize="16sp"
            android:textStyle="bold"
            android:textColor="@color/colorPrimary"
            android:textAllCaps="true"
            android:fontFamily="sans-serif-condensed"
            android:layout_marginBottom="48dp"
            android:layout_marginRight="8dp"
            android:layout_height="wrap_content" />

        <TextView
            android:layout_width="match_parent"
            android:layout_marginLeft="8dp"
            android:text="@string/ask_stack_search"
            android:textSize="14sp"
            android:textStyle="bold"
            android:textColor="@color/colorPrimary"
            android:textAllCaps="true"
            android:fontFamily="sans-serif-condensed"
            android:layout_marginBottom="4dp"
            android:layout_marginRight="8dp"
            android:layout_marginTop="16dp"
            android:layout_height="wrap_content" />
        <EditText
            android:layout_marginRight="8dp"
            android:layout_marginLeft="8dp"
            android:inputType="text"
            android:id="@+id/m_e1"
            android:selectAllOnFocus="true"
            android:layout_marginBottom="16dp"
            android:hint="@string/start_search_your_query_here"
            android:layout_width="match_parent"
            android:fontFamily="sans-serif-condensed"
            android:layout_height="wrap_content" />
        <Button
            android:layout_width="match_parent"
            android:layout_marginLeft="8dp"
            android:text="@string/search"
            android:textStyle="bold"
            android:id="@+id/m_b1"
            android:textSize="16sp"
            android:fontFamily="sans-serif-condensed"
            android:textColor="@color/colorWhite"
            android:layout_marginRight="8dp"
            android:layout_marginBottom="16dp"
            android:layout_marginTop="64dp"
            android:background="@color/colorBlueDark"
            android:layout_height="wrap_content" />

        <Button
            android:layout_width="match_parent"
            android:layout_marginLeft="8dp"
            android:text="@string/devloped_by_ankush_kumar"
            android:textStyle="bold"
            android:id="@+id/m_b2"
            android:textSize="16sp"
            android:fontFamily="sans-serif-condensed"
            android:textColor="@color/colorPrimary"
            android:layout_marginRight="8dp"
            android:layout_marginBottom="16dp"
            android:layout_marginTop="64dp"
            android:background="@color/colorWhite"
            android:layout_height="wrap_content" />
    </LinearLayout>
</ScrollView>