<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="match_parent"
    tools:context=".SearchResultActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="vertical">
        <ScrollView
            android:layout_width="match_parent"
            android:id="@+id/sr_shot_view"
            android:visibility="gone"
            android:layout_height="match_parent">
            <LinearLayout
                android:layout_width="match_parent"
                android:orientation="vertical"
                android:padding="12dp"
                android:layout_height="wrap_content">
                <TextView
                    android:layout_width="match_parent"
                    android:text="@string/shorting"
                    android:textStyle="bold"
                    android:textColor="@color/colorPrimary"
                    android:fontFamily="sans-serif-condensed"
                    android:layout_height="wrap_content" />
                <RadioButton
                    android:id="@+id/srs_s1"
                    android:layout_width="match_parent"
                    android:layout_margin="4dp"
                    android:text="Activity"
                    android:layout_height="wrap_content" />
                <RadioButton
                    android:id="@+id/srs_s2"
                    android:layout_width="match_parent"
                    android:layout_margin="4dp"
                    android:text="@string/votes"
                    android:layout_height="wrap_content" />
                <RadioButton
                    android:id="@+id/srs_s3"
                    android:layout_width="match_parent"
                    android:layout_margin="4dp"
                    android:text="Creation"
                    android:layout_height="wrap_content" />
                <RadioButton
                    android:id="@+id/srs_s4"
                    android:checked="true"
                    android:layout_width="match_parent"
                    android:layout_marginTop="4dp"
                    android:layout_marginLeft="4dp"
                    android:layout_marginRight="4dp"
                    android:text="Relevance"
                    android:layout_marginBottom="16dp"
                    android:layout_height="wrap_content" />
                <TextView
                    android:layout_width="match_parent"
                    android:text="@string/order"
                    android:textStyle="bold"
                    android:textColor="@color/colorPrimary"
                    android:fontFamily="sans-serif-condensed"
                    android:layout_height="wrap_content" />
                <RadioButton
                    android:layout_width="match_parent"
                    android:id="@+id/srs_o1"
                    android:layout_margin="4dp"
                    android:checked="true"
                    android:text="@string/ascending"
                    android:layout_height="wrap_content" />
                <RadioButton
                    android:id="@+id/srs_o2"
                    android:text="@string/descending"
                    android:layout_width="match_parent"
                    android:layout_margin="4dp"
                    android:layout_height="wrap_content" />
            </LinearLayout>
        </ScrollView>
        <ListView
            android:id="@+id/sr_list"
            android:layout_width="match_parent"
            android:visibility="gone"
            android:layout_weight="1"
            android:layout_height="0dp" />
        <ProgressBar
            android:layout_width="match_parent"
            android:layout_margin="16dp"
            android:id="@+id/sr_pbar"
            android:layout_height="wrap_content" />
        <ImageView
            android:layout_width="64dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="34dp"
            android:id="@+id/sr_wifi_error"
            android:layout_marginBottom="8dp"
            android:visibility="gone"
            android:src="@drawable/wifi_off"
            android:layout_height="64dp" />
        <TextView
            android:layout_width="match_parent"
            android:layout_margin="16dp"
            android:gravity="center_horizontal"
            android:textSize="14sp"
            android:textColor="@color/colorPrimary"
            android:fontFamily="sans-serif-condensed"
            android:id="@+id/sr_t"
            android:layout_height="wrap_content" />
        <TextView
            android:layout_width="match_parent"
            android:visibility="gone"
            android:gravity="center_horizontal"
            android:ellipsize="end"
            android:maxLines="1"
            android:textSize="14sp"
            android:padding="8dp"
            android:textColor="@color/colorPrimary"
            android:fontFamily="sans-serif-condensed"
            android:id="@+id/sr_loadmore"
            android:layout_height="wrap_content" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <Button
            android:layout_width="0dp"
            android:layout_weight="1"
            android:id="@+id/sr_filter_button"
            android:text="@string/filter"
            android:background="@color/colorWhite"
            android:layout_height="wrap_content" />
        <Button
            android:layout_width="0dp"
            android:layout_weight="1"
            android:id="@+id/sr_shorting_button"
            android:text="@string/shorting"
            android:background="@color/colorWhite"
            android:layout_height="wrap_content" />
    </LinearLayout>
</LinearLayout>